crates/secretenv-core/tests/value_access_ui/build_env_not_re_exported.stderr
error[E0425]: cannot find value `build_env` in crate `secretenv_core`
  --> tests/value_access_ui/build_env_not_re_exported.rs:13:29
   |
13 |     let _ = secretenv_core::build_env;
   |                             ^^^^^^^^^ not found in `secretenv_core`
   |
note: found an item that was configured out
  --> src/lib.rs
   |
   | #[cfg(feature = "value-access")]
   |       ------------------------ the item is gated behind the `value-access` feature
   | pub use runner::{build_env, run, run_with_options, EnvEntry, RedactMode, RunOptions};
   |                  ^^^^^^^^^
